--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -23,12 +23,14 @@
                 <%= tag.p event.address, class:"card-text", id:"eventAddress" %>
                 <%= tag.p event.time.strftime("%-d %B at %l:%M %P"), class:"card-text", id:"eventTime" %>
               </div>
-              <div class="card-footer bg-transparent border-light">
-                <div class = "events-card-links">
-                  <%= link_to 'Edit', edit_event_path(event), class:"btn btn-dark btn-sm" %>
-                  <%= link_to 'Delete', event, class:"btn btn-dark btn-sm", method: :delete, data: { confirm: 'Are you sure?' } %>
+              <% if can? :manage, User %>
+                <div class="card-footer bg-transparent border-light">
+                  <div class = "events-card-links">
+                    <%= link_to 'Edit', edit_event_path(event), class:"btn btn-dark btn-sm" %>
+                    <%= link_to 'Delete', event, class:"btn btn-dark btn-sm", method: :delete, data: { confirm: 'Are you sure?' } %>
+                  </div>
                 </div>
-              </div>
+              <% end %>
             </div>
         </div>
     <% end %>
